openshift/route-phoenix.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
  labels:
    paas.redhat.com/appcode: JTNR-001
  name: phoenix
spec:
  host: phoenix-jotnar-ymir--jotnar-ymir.apps.gpc.ocp-hub.prod.psi.redhat.com
  port:
    targetPort: 6006-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: phoenix
    weight: 100
  wildcardPolicy: None
